--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,7 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "testTimeout": 30000,
-    "preset": "@shelf/jest-mongodb"
+    "testTimeout": 30000
   },
   "config": {
     "mongodbMemoryServer": {
@@ -19,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@shelf/jest-mongodb": "^1.2.3",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
