testing travis yml file 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ node_js:
 cache: npm
 
 script: 
-  - cd frontend && npm test
-  - cd ../backend && npm test
+  - cd frontend
+  - npm test
+  - cd ../backend
+  - npm test
