--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "mediaserver": "^0.1.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
     "nodemon": "^2.0.7",
