--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testTimeout": 30000
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "latest"
+    }
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "mediaserver": "^0.1.1",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.16",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
