--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,9 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
     "nodemon": "^2.0.7",
+    "oauth2orize": "^1.11.0",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "supertest": "^6.1.3"
   }
 }
