--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mediaserver": "^0.1.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
