--- a/backend/package.json
+++ b/backend/package.json
@@ -19,14 +19,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mediaserver": "^0.1.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
     "nodemon": "^2.0.7",
+    "oauth2orize": "^1.11.0",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "supertest": "^6.1.3"
   }
 }
