webcam is now displayed videos can be streamed

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-system": "^2.2.2",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mediaserver": "^0.1.1",
