--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "enzyme": "^3.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-webcam": "^5.2.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
