--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "file-system": "^1.2.2",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mathjs": "^9.3.0",
     "mediaserver": "^0.1.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
