--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,15 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "axios": "^0.21.1",
     "enzyme": "^3.11.0",
+    "konva": "^7.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-konva": "^17.0.1-3",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-webcam": "^5.2.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
