--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "oauth2orize": "^1.11.0",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
+    "redis": "^3.1.0",
+    "socket.io": "^4.0.1",
     "supertest": "^6.1.3"
   }
 }
