--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-webcam": "^5.2.3",
+    "socket.io-client": "^4.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
