--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "cron": "^1.8.2",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -31,10 +32,15 @@
     "mediaserver": "^0.1.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "oauth2orize": "^1.11.0",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
-    "supertest": "^6.1.3"
+    "redis": "^3.1.0",
+    "socket.io": "^4.0.1",
+    "socket.io-redis": "^6.1.0",
+    "supertest": "^6.1.3",
+    "swagger-ui-express": "^4.1.6"
   }
 }
